# solana-bootcamp-lectures

project_specs/echo-skeleton/: echo.json  package-lock.json  package.json
project_specs/echo-skeleton/js/: index.js  index2.js  index3.js  index4.js  instructions.js  package-lock.json  package.json  util.js
project_specs/echo-skeleton/program/: Cargo.toml
project_specs/echo-skeleton/program/src/: error.rs  processor.rs  state.rs
