cargo-features = ["edition2021"]

[package]
name = "echo"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
borsh = "0.9"
bytemuck = {version = "1.12.3", features = ["derive"]}
solana-program = "1.13.6"
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
num-traits = "0.2.15"
num-derive = "0.3"
thiserror = "1.0"

[features]
test-bpf = []


[lib]
crate-type = ["cdylib", "lib"]
